Fix alignment of main-content container

--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ footer, header, hgroup, menu, nav, section {
 
 body {
 	line-height: 1;
+    height: 100vh;
 }
 
 ol, ul {
@@ -58,7 +59,8 @@ table {
 .container {
     display: grid;
     grid-template-columns: minmax(min-content, 200px) 4fr;
-    grid-template-rows: 1fr 3fr;
+    grid-template-rows: 200px 3fr;
+    height: 100vh;
 }
 
 /* Fonts */
@@ -87,18 +89,13 @@ p {
     color: #737373;
 }
 
-.person {
-    font-family: 'Roboto', sans-serif;
-    font-size: 12px;
-}
-
 /* Side bar */ 
 
 .side-bar {
     display: grid;
     grid-area: 1 / 1 / 3 / 2;
     grid-template-columns: 1fr 4fr;
-    grid-template-rows: 75px repeat(5, minmax(20px, 30px)) 75px repeat(3, minmax(20px, 30px));
+    grid-template-rows: 75px repeat(5, minmax(min-content, 30px)) 75px repeat(3, minmax(min-content, 30px));
     background-color: #0ea5e9;
     color: #ffffff;
     padding: 20px;
@@ -139,11 +136,16 @@ input[type=text] {
     display: flex;
     justify-content: flex-start;
     gap: 20px;
+    margin-top: 5px;
 }
 
 .name img {
     display: flex;
     align-self: flex-start;
+}
+
+.name h3 {
+    margin-top: 5px;
 }
 
 .greeting {
@@ -177,24 +179,42 @@ button {
 .main-content {
     display: grid;
     grid-area: 2 / 2 / 3 / 3;
-    grid-template-columns: 3fr minmax(min-content, 300px);
+    grid-template-columns: 3fr minmax(300px, 1fr);
     grid-template-rows: 1fr 1fr;
     box-shadow: 0 -3px 5px rgb(0 0 0 / 0.2);
     background-color: #e2e8f0;
 }
 
+.title-your-projects,
+.title-announcements,
+.title-trending {
+    align-self: flex-start;
+    margin: 10px 0 0 30px;
+}
+
 .title-your-projects {
     grid-area: 1 / 1 / 3 / 2;
-    align-self: flex-start;
-    margin-left: 20px;
+}
+
+.title-announcements {
+    grid-area: 1 / 2 / 2 / 3;
+}
+
+.title-trending {
+    grid-area: 2 / 2 / 3 / 3;
+}
+
+.project-container,
+.announcements,
+.trending {
+    margin: 30px;
 }
 
 .project-container {
     display: grid;
     grid-area: 1 / 1 / 3 / 2;
-    grid-template-columns: repeat(auto-fit, 200px);
+    grid-template-columns: repeat(auto-fit, 250px);
     gap: 20px;
-    margin: 20px;
 }
 
 .project {
@@ -206,26 +226,23 @@ button {
     padding: 20px;
 }
 
-.title-announcements {
-    grid-area: 1 / 2 / 2 / 3;
-    align-self: flex-start;
-    margin-left: 20px;
+.project-images {
+    display: flex;
+    justify-content: flex-end;
+    gap: 15px;
 }
 
 .announcements {
-    display: grid;
     grid-area: 1 / 2 / 2 / 3;
     background-color: #ffffff;
     border-radius: 5px;
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
     padding: 20px;
-    margin: 20px;
 }
 
-.title-trending {
-    grid-area: 2 / 2 / 3 / 3;
-    align-self: flex-start;
-    margin-left: 20px;
+hr {
+    size: "30"; 
+    color: #737373;
 }
 
 .trending {
@@ -237,5 +254,4 @@ button {
     border-radius: 5px;
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
     padding: 20px;
-    margin: 20px;
 }
